# scribbly

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md  task.md
.github/workflows/: ci.yml  deploy.yml
ai-engine/: README.md  __init__.py  animation_pipeline.py  device.py  lora_manager.py  pipeline.py  preprocess.py  style_manager.py  test_controlnet.py  test_inference.py  test_preprocess.py
ai-engine/config/: model_config.yaml  style_config.yaml
ai-engine/scripts/: download_models.sh
ai-engine/tests/: __init__.py  test_animation_pipeline.py  test_lora_manager.py  test_pipeline.py  test_style_manager.py
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  api.md  celery_app.py  config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py
backend/app/routers/: __init__.py  artwork.py  generate.py  tasks.py
backend/app/schemas/: __init__.py  task.py
backend/app/scripts/: e2e_test.py
backend/app/services/: __init__.py  storage.py  task.py
backend/app/tasks/: generate.py
backend/app/utils/: __init__.py
backend/tests/: test_artwork.py  test_database.py  test_dependencies.py  test_main.py  test_tasks.py
docs/architecture/: README.md
docs/style-samples/: README.md
infra/: README.md
infra/docker/: Dockerfile.backend-cpu  Dockerfile.backend-gpu  Dockerfile.celery  Dockerfile.celery-gpu  Dockerfile.web  Dockerfile.web-dev  nginx.conf
ios/: .swiftlint.yml  README.md
web/: .env.example  README.md  eslint.config.js  package.json
web/.husky/: pre-commit
